feat: Enhance PWA support with meta tags, icons, and manifest file
- Added PWA meta tags to index.html for improved SEO and mobile experience.
- Included app icons in various sizes for better compatibility.
- Created a manifest.json file to define app properties for PWA functionality.
- Removed the ToastNotification component and related code as part of the refactor.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Tracker</title>
+  
+  <!-- PWA Meta Tags -->
+  <meta name="description" content="Portfolio Tracker - Manage your investment portfolio">
+  <meta name="theme-color" content="#6366f1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Portfolio Tracker">
+  
+  <!-- Icons -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
+  <link rel="manifest" href="/manifest.json">
+  
+  <!-- Fonts -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
